SERVER-72571 Instantiate ReservedTimes object in onModifyShardedCollectionGlobalIndexCatalogEntry observer